修改了用例文档中收付款的部分

--- a/doc/md/用例文档/用例文档.md
+++ b/doc/md/用例文档/用例文档.md
@@ -192,39 +192,6 @@ id| 6 | 名称| 商品分类管理
 |特殊需求|１，商品价格前加人民币符号，以人民币为单位，并保留两位小数。<br>2，商品编号符合统一的编号规范。
 
 
-### 收款
-
-id| 8 | 名称| 收款
-|---|---|---|---|
-创建者 | 张翔宇 | 最后更新者 | 张翔宇
-创建时间|2017/9/19|最后更新时间|2017/9/26
-
-
-
-参与者|财务人员，目标完成收款
--- | :--
-触发条件|无
-前置条件|财务人员必须已经被识别和授权
-后置条件|保存收款单信息并提交给总经理
-优先级|高
-正常流程|1、财务人员新建收款单
-|2、系统生成一个收款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
-|3、财务人员输入客户编号
-|4、系统显示客户名称、编号
-|5、财务人员填写转账列表。包括选择银行账户，输入转账金额
-|6、系统更新总额列表
-|7、财务人员提交收款单
-|8、系统保存收款单并提交给总经理
-扩展流程|1a、财务人员选择之前的草稿继续编写
-|2a、收款单号超过99999
-|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日收款单超过限额，拒绝继续生成收款单
-|2-5a、财务人员保存单据
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
-|3a、输入的客户编号不存在
-|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
-|5a、财务人员输入备注
-|&nbsp;&nbsp;&nbsp;&nbsp;6、系统显示备注
-特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
 
@@ -364,22 +331,72 @@ ID |12| 名称| 进货退货
 
 
 
+### 收款
+
+id| 8 | 名称| 收款
+|---|---|---|---|
+创建者 | 张翔宇 | 最后更新者 | 张翔宇
+创建时间|2017/9/19|最后更新时间|2018/1/12
+
+
+
+参与者|财务人员，目标完成收款
+-- | :--
+触发条件|无
+前置条件|财务人员必须已经被识别和授权
+后置条件|保存收款单信息并提交给总经理
+优先级|高
+正常流程|1、财务人员新建收款单
+|2、系统生成一个收款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
+|3、财务人员输入客户编号或名称进行查找
+|4、系统返回符合条件的查找结果
+|5、财务人员选择银行账户
+|6、系统更新转账列表，显示被选择的银行账户
+|7、财务人员填写转账列表
+|8、系统更新转账列表，并更新总额
+|重复5-8至财物人员完成转账列表的填写
+|9、财务人员提交收款单
+|10、系统保存收款单并提交给总经理
+扩展流程|1a、财务人员选择之前的草稿继续编写
+|2a、收款单号超过99999
+|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日收款单超过限额，拒绝继续生成收款单
+|2-8a、财务人员保存单据
+|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
+|3a、输入的客户编号或名称不存在
+|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
+特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
+
 ### 付款
 ID |13| 名称| 付款 
 ---|---|---|---|
-创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
+创建者 | 李安迪 |最后一次更新者  | 张翔宇 |
+创建日期|2017.9.19|最后一次更新日期 |2018/1/12
 
-参与者|财务人员，目标是快速准确制定付款单
----|---|
+参与者|财务人员，目标完成付款
+-- | :--
 触发条件|无
 前置条件|财务人员必须已经被识别和授权
 后置条件|保存付款单信息并提交给总经理
 优先级|高
-正常流程|1、财务人员新建一个付款单<br/>2、系统生成一个收款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。<br/>3、财务人员输入客户编号<br/>4、系统显示客户名称、编号<br/>5、财务人员填写转账列表，包括银行账户、转账金额。<br/>6、系统计算总额并显示。<br/>7、财务人员提交付款单。<br/>8、系统保存付款单并提交
-扩展流程|2a、付款单计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日付款单生成量超过限额，并拒绝输入<br/>3a、输入的客户编号不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示不存在该客户<br/>5a、财务人员输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>5b、财务人员保存付款草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存付款草稿单<br/>5b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提供之前保存的草稿单供继续编辑
-特殊需求|付款单单据编号格式为FKD-yyyyMMdd-xxxxx，后五位每天从1开始编号
-
+正常流程|1、财务人员新建付款单
+|2、系统生成一个付款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
+|3、财务人员输入客户编号或名称进行查找
+|4、系统返回符合条件的查找结果
+|5、财务人员选择银行账户
+|6、系统更新转账列表，显示被选择的银行账户
+|7、财务人员填写转账列表
+|8、系统更新转账列表，并更新总额
+|重复5-8至财物人员完成转账列表的填写
+|9、财务人员提交付款单
+|10、系统保存付款单并提交给总经理
+扩展流程|1a、财务人员选择之前的草稿继续编写
+|2a、付款单号超过99999
+|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日付款单超过限额，拒绝继续生成付款单
+|2-8a、财务人员保存单据
+|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
+|3a、输入的客户编号或名称不存在
+|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
+特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
 ### 现金费用处理
