修正销售模块用例文档

--- a/doc/md/用例文档/用例文档.md
+++ b/doc/md/用例文档/用例文档.md
@@ -232,8 +232,8 @@ id| 8 | 名称| 收款
 
 id| 9 | 名称| 销售
 |---|---|---|---|
-创建者 | 张翔宇 | 最后更新者 | 张翔宇
-创建时间|2017/9/19|最后更新时间|2017/9/30
+创建者 | 张翔宇 | 最后更新者 | 李安迪
+创建时间|2017/9/19|最后更新时间|2018/1/12
 
 
 
@@ -243,47 +243,16 @@ id| 9 | 名称| 销售
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存销售单信息并提交给总经理
 优先级|高
-正常流程|1、销售人员新建销售单
-|2、系统生成一个销售出货单，包括：单据编号（自动计算），客户（仅显示销售商），业务员（和这个客户打交道的公司员工，可以设置一个客户的默认业务员），操作员（当前登录系统的用户），仓库，出货商品清单，折让前总额，折让，使用代金卷金额，折让后总额，备注。出货商品清单中的内容暂时为空，包括商品的编号，名称，型号，数量，单价，金额，商品备注。
-|3、销售人员输入客户编号
-|4、系统显示客户名称，编号
-|5、销售人员请求选择商品
-|6、系统显示商品选择界面
-|7、销售人员选择商品名称
-|8、系统显示商品编号，型号，默认单价
-|9、销售人员输入商品数量
-|10、系统计算总金额
-|重复5-10步，直到销售人员完成所有商品的输入
-|11、销售人员输入折让金额，代金劵金额
-|12、系统计算总金额
-|13、销售人员提交销售单
-|14、系统保存并提交销售单
-扩展流程|1a、销售人员请求打开草稿单
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表
-|&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单
-|&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态
-|2a、销售单号超过99999
-|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日销售单超过限额，拒绝继续生成销售单
-|3a、输入的客户编号不存在
-|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
-|3b、销售员或销售经理输入备注
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注
-|9a、销售员或销售经理更改商品单价
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价，并计算总额
-|9b、销售员或销售经理填写备注
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注
-|3-9b、销售人员保存单据
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
-|11a、折让金额超出折让额度
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12、系统提示折让超出额度
+正常流程|1、销售人员新建销售单<br>2、系统生成一个销售出货单，包括：单据编号（自动计算），客户姓名，客户编号，业务员，操作员，仓库（默认为默认仓库），商品列表，使用策略列表，赠品列表，赠券金额，折让前总额（默认为0），折让（默认为0），使用代金券金额（默认为0），折让后总额（默认为0），备注。商品列表中的内容暂时为空，包括商品的编号，名称，型号，数量，单价，金额，商品备注。使用策略列表和赠品列表暂时为空。客户姓名，客户编号，业务员暂时为空。<br>3、销售人员输入客户查找信息，请求查找客户<br>4、系统显示客户选择页面，包括客户的编号，姓名，等级<br>5、销售人员选择客户并确认<br>6、系统关闭客户选择页面，在销售出货单中显示客户名，客户编号，默认业务员<br>7、销售人员输入商品查找信息，请求查找商品<br>8、系统显示商品选择界面<br>9、销售人员选择商品并确认<br>10、系统更新商品列表，计算并显示折让前总额和折让后总额<br>重复7-10步，直到销售人员完成所有商品的选择<br>11、销售人员输入折让金额，使用代金劵金额<br>12、系统计算折让后总额<br>13、销售人员请求获取销售策略<br>14、系统更新使用策略列表，赠品列表，赠券金额和折让后总额<br>15、销售人员提交销售单<br>16、系统检查单据，提交销售单，并提示提交成功
+扩展流程|1a、销售人员请求打开草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br>2a、销售单号超过99999<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日销售单超过限额，拒绝继续生成销售单<br>6a、销售人员更改业务员<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改显示的业务员<br>9a、销售员或销售经理更改商品单价<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改显示的商品单价<br>9b、销售员或销售经理填写备注<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br>9c、销售员或销售经理更改商品数量<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示商品数量<br>3-13b、销售人员保存单据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态<br>15a、折让金额超出折让额度<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示折让超出额度，拒绝提交<br>15b、数字格式不符合要求<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示数字格式错误，拒绝提交<br>15c、单据取消<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统取消该销售单，并提示取消成功，回到主页面<br>15d、未选择客户或商品<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示请填写并选择所有项，拒绝提交
 特殊需求|单据编号格式为 XSD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 ### 销售退货
 
 id| 10 | 名称| 销售退货
 |---|---|---|---|
-创建者 | 张翔宇 | 最后更新者 | 张翔宇
-创建时间|2017/9/19|最后更新时间|2017/9/30
+创建者 | 张翔宇 | 最后更新者 | 李安迪
+创建时间|2017/9/19|最后更新时间|2018/1/12
 
 
 
@@ -293,39 +262,8 @@ id| 10 | 名称| 销售退货
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存销售退货单信息并提交给总经理
 优先级|高
-正常流程|1、销售人员新建销售退货单
-|2、系统生成一个销售退货单，包括：单据编号（自动计算），客户（仅显示销售商），业务员（和这个客户打交道的公司员工，可以设置一个客户的默认业务员），操作员（当前登录系统的用户），仓库，入货商品清单，折让前总额，折让，使用代金卷金额，折让后总额，备注。入货商品清单中的内容暂时为空，包括商品的编号，名称，型号，数量，单价，金额，商品备注。
-|3、销售人员输入客户编号
-|4、系统显示客户名称，编号
-|5、销售人员请求选择商品
-|6、系统显示商品选择界面
-|7、销售人员选择商品名称
-|8、系统显示商品编号，型号，默认单价
-|9、销售人员输入商品数量
-|10、系统计算总金额
-|重复5-10步，直到销售人员完成所有商品的输入
-|11、销售人员输入折让金额，代金劵金额
-|12、系统计算总金额
-|13、销售人员提交销售退货单
-|14、系统保存并提交销售退货单
-扩展流程|1a、销售人员请求打开草稿单
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表
-|&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单
-|&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态
-|2a、销售退货单号超过99999
-|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日销售退货单超过限额，拒绝继续生成销售退货单
-|3a、输入的客户编号不存在
-|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
-|3b、销售员或销售经理输入备注
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注
-|9a、销售员或销售经理更改商品单价
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价，并计算总额
-|9b、销售员或销售经理填写备注
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注
-|3-9b、销售人员保存单据
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
-|11a、折让金额超出折让额度
-|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12、系统提示折让超出额度
+正常流程|1、销售人员新建销售单<br>2、系统生成一个销售出货单，包括：单据编号（自动计算），客户姓名，客户编号，业务员，操作员，仓库（默认为默认仓库），商品列表，折让前总额（默认为0），折让（默认为0），使用代金券金额（默认为0），折让后总额（默认为0），备注。商品列表中的内容暂时为空，包括商品的编号，名称，型号，数量，单价，金额，商品备注。客户姓名，客户编号，业务员暂时为空。<br>3、销售人员输入客户查找信息，请求查找客户<br>4、系统显示客户选择页面，包括客户的编号，姓名，等级<br>5、销售人员选择客户并确认<br>6、系统关闭客户选择页面，在销售出货单中显示客户名，客户编号，默认业务员<br>7、销售人员输入商品查找信息，请求查找商品<br>8、系统显示商品选择界面<br>9、销售人员选择商品并确认<br>10、系统更新商品列表，计算并显示折让前总额和折让后总额<br>重复7-10步，直到销售人员完成所有商品的选择<br>11、销售人员输入折让金额，使用代金劵金额<br>12、系统计算折让后总额<br>13、销售人员提交销售单<br>14、系统检查单据，提交销售单，并提示提交成功
+扩展流程|<br>1a、销售人员请求打开草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br>2a、销售退货单号超过99999<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日销售退货单超过限额，拒绝继续生成销售退货单<br>6a、销售人员更改业务员<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改显示的业务员<br>9a、销售员或销售经理更改商品单价<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改显示的商品单价<br>9b、销售员或销售经理填写备注<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br>9c、销售员或销售经理更改商品数量<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示商品数量<br>3-13b、销售人员保存单据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态<br>13a、折让金额超出折让额度<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示折让超出额度，拒绝提交<br>13b、数字格式不符合要求<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示数字格式错误，拒绝提交<br>13c、单据取消<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统取消该销售退货单，并提示取消成功，回到主页面<br>13d、未选择客户或商品<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示请填写并选择所有项，拒绝提交
 特殊需求|单据编号格式为 XSTHD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
@@ -334,23 +272,27 @@ id| 10 | 名称| 销售退货
 ID |11| 名称| 进货 
 ---|---|---|---|
 创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
+创建日期|2017.9.19|最后一次更新日期 |2018.1.12
+
+
 
 参与者|销售员，目标是快速准确进货<br/>销售经理,目标是快速准确进货
----|---|
+--|--|
 触发条件|无
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存进货单信息并提交给总经理
 优先级|高
-正常流程|1、销售员或销售经理新建一个进货单<br/>2、系统生成进货单，包括：单据编号（自动计算），供应商，仓库，操作员，入库商品列表，备注，总额合计。其中入库商品列表包含的信息有：商品编号，名称，型号，数量，单价，金额，备注<br/>3、销售员或销售经理输入客户名称或编号<br/>4、系统显示客户名称编号<br/>5、销售员或销售经理请求选择商品。<br/>6、系统提供商品选择列表<br/>7、销售员或销售经理选择商品名称<br/>8、系统显示商品编号，型号，默认单价<br/>9、销售员或销售经理填写商品数量，单价，备注<br/>10、系统计算总额<br/>销售员或销售经理重复5~10步，直到完成所有商品的选择<br/>11、销售员或销售经理提交进货单<br/>12、系统保存并提交进货单
-扩展流程|1b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br/>2a、进货单据计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货单生成量超过限额，并拒绝输入<br/>3a、销售员或销售经理输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>3b、输入的客户不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示客户不存在<br/>9a、销售员或销售经理更改商品单价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价<br/>9b、销售员或销售经理填写备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>1-10a、销售员或销售经理保存进货草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存进货草稿单<br/>
+正常流程|1、销售员或销售经理新建一个进货单<br>2、系统生成一个进货单，包括：单据编号（自动计算），客户姓名，客户编号，操作员，仓库（默认为默认仓库），商品列表，总额（默认为0），备注。商品列表中的内容暂时为空，包括商品的编号，名称，型号，数量，单价，金额，商品备注。<br>3、销售人员输入客户查找信息，请求查找客户<br>4、系统显示客户选择页面，包括客户的编号，姓名，等级<br>5、销售人员选择客户并确认<br>6、系统关闭客户选择页面，在进货单中显示客户名，客户编号<br>7、销售人员输入商品查找信息，请求查找商品<br>8、系统显示商品选择界面<br>9、销售人员选择商品并确认<br>10、系统更新商品列表，计算并显示总额<br>重复7-10步，直到销售人员完成所有商品的选择<br>11、销售员或销售经理提交进货单<br>12、系统保存并提交进货单
+扩展流程|1a、销售人员请求打开草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br>2a、进货单号超过99999<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货单超过限额，拒绝继续生成进货单<br>9a、销售员或销售经理更改商品单价<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改显示的商品单价<br>9b、销售员或销售经理填写备注<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br>9c、销售员或销售经理更改商品数量<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示商品数量<br>3-9b、销售人员保存单据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态<br>13a、折让金额超出折让额度<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示折让超出额度，拒绝提交<br>13b、数字格式不符合要求<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示数字格式错误，拒绝提交<br>13c、单据取消<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统取消该进货单，并提示取消成功，回到主页面<br>13d、未选择客户或商品<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示请填写并选择所有项，拒绝提交
 特殊需求|进货单单据编号格式为JHD-yyyyMMdd-xxxxx，后五位每天从1开始编号
-
 ### 进货退货
-ID |12| 名称| 进货退货 
+
+ID |11| 名称| 进货退货 
 ---|---|---|---|
 创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
+创建日期|2017.9.19|最后一次更新日期 |2018.1.12
+
+
 
 参与者|销售员，目标是快速准确进货退货<br/>销售经理,目标是快速准确进货退货
 ---|---|
@@ -358,8 +300,8 @@ ID |12| 名称| 进货退货
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存进货退货单信息并提交给总经理
 优先级|高
-正常流程|1、销售员或销售经理新建一个进货退货单<br/>2、系统生成进货退货单，包括：单据编号（自动计算），供应商，仓库，操作员，出库商品列表，备注，总额合计。其中出库商品列表包含的信息有：商品编号，名称，型号，数量，单价，金额，备注<br/>3、销售员或销售经理输入客户名称或编号<br/>4、系统显示客户名称编号<br/>5、销售员或销售经理请求选择商品。<br/>6、系统提供商品选择列表<br/>7、销售员或销售经理选择商品名称<br/>8、系统显示商品编号，型号，默认单价<br/>9、销售员或销售经理填写商品数量，单价，备注<br/>10、系统计算总额<br/>销售员或销售经理重复5~10步，直到完成所有商品的选择<br/>11、销售员或销售经理提交进货退货单<br/>12、系统保存并提交进货退货单
-扩展流程|1b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br/>2a、进货退货单据计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货退货单生成量超过限额，并拒绝输入<br/>3a、销售员或销售经理输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>3b、输入的客户不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示客户不存在<br/>9a、销售员或销售经理更改商品单价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价<br/>9b、销售员或销售经理填写备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>1-10a、销售员或销售经理保存进货退货草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存进货退货草稿单<br/>
+正常流程|1、销售员或销售经理新建一个进货退货单<br>2、系统生成一个进货退货单，包括：单据编号（自动计算），客户姓名，客户编号，操作员，仓库（默认为默认仓库），商品列表，总额（默认为0），备注。商品列表中的内容暂时为空，包括商品的编号，名称，型号，数量，单价，金额，商品备注。<br>3、销售人员输入客户查找信息，请求查找客户<br>4、系统显示客户选择页面，包括客户的编号，姓名，等级<br>5、销售人员选择客户并确认<br>6、系统关闭客户选择页面，在进货退货单中显示客户名，客户编号<br>7、销售人员输入商品查找信息，请求查找商品<br>8、系统显示商品选择界面<br>9、销售人员选择商品并确认<br>10、系统更新商品列表，计算并显示总额<br>11、销售员或销售经理提交进货退货单<br>12、系统保存并提交进货退货单
+扩展流程|1a、销售人员请求打开草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br>2a、进货退货单号超过99999<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货退货单超过限额，拒绝继续生成进货退货单<br>9a、销售员或销售经理更改商品单价<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改显示的商品单价<br>9b、销售员或销售经理填写备注<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br>9c、销售员或销售经理更改商品数量<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示商品数量<br>3-9b、销售人员保存单据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态<br>13a、折让金额超出折让额度<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示折让超出额度，拒绝提交<br>13b、数字格式不符合要求<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示数字格式错误，拒绝提交<br>13c、单据取消<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统取消该进货退货单，并提示取消成功，回到主页面<br>13d、未选择客户或商品<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示请填写并选择所有项，拒绝提交
 特殊需求|进货退货单单据编号格式为JHTHD-yyyyMMdd-xxxxx，后五位每天从1开始编号
 
 
