--- a/doc/md/用例文档/用例文档.md
+++ b/doc/md/用例文档/用例文档.md
@@ -8,12 +8,82 @@
 <br/><br/>
 
 ## 目录
+[1.商品分类管理](#1)  
+[2.商品管理](#2)  
+[3.库存信息查看](#3)    
+[4.库存赠送](#4)  
+[5.库存修正](#5)    
+[6.客户管理](#6)  
+[7.进货](#7)  
+[8.进货退货](#8)  
+[9.销售](#9)  
+[10.销售退货](#10)  
+[11.账户管理](#11)  
+[12.收款](#12)  
+[13.付款](#13)  
+[14.现金费用处理](#14)  
+[15.期初建账](#15)  
+[16.制定促销策略](#16)  
+[17.审批单据](#17)  
+[18.日志查看](#18)  
+[19.查看销售明细表](#19)  
+[20.查看经营历程](#20)  
+[21.查看经营情况](#21)  
+[21.用户账户管理](#22)  
+
+<h3 id='1'>商品分类管理</h3>
+
+id| 1 | 名称| 商品分类管理
+|---|---|---|---|
+创建者 | 张翔宇 | 最后更新者 | 张翔宇
+创建时间|2017/9/19|最后更新时间|2017/9/30
 
 
-### 库存信息查看
+参与者|库存管理人员，目标是管理商品的分类
+-- | --
+触发条件|无
+前置条件|库存管理人员必须已经被识别和授权
+后置条件|商品分类被修改
+优先级|低
+正常流程|**1.1 增加分类**
+|1、库存管理员选择增加商品分类
+|2、系统提示库存管理员输入增加的分类名称
+|3、库存管理员输入增加的分类名称并保存
+|4、系统保存新分类的名称及其父分类
+|**1.2 删除分类**
+|1、库存管理员选择删除商品分类
+|2、系统删除该分类
+|**1.3 修改分类**
+|1、库存管理员选择想要修改的分类
+|2、系统提示库存管理员输入要修改的名称
+|3、库存管理员输入名称并保存
+|4、系统保存修改后的分类名称
+扩展流程|无
+特殊需求|只能删除没有商品的叶分类
 
 
-| ID | 1 |
+<h3 id='2'>商品管理</h3>
+
+| ID | 2|
+|----|----|
+|用例名称|商品管理
+|创建者|王瑞华
+|最后一次更新者|李安迪
+|创建时间|2017.9.14
+|最后一次更新时间| 2017.9.21
+|参与者|库存管理人员，目的是处理商品或商品信息的变动
+|触发条件|市场变化：新商品出现；旧商品淘汰；商品标识、名称或价格变化
+|前置条件|库存管理人员已被认证和授权
+|后置条件|记录商品变更信息
+|优先级|高
+|正常流程|1.1 商品的增加<br>1，库存管理人员输入商品属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）并为部分属性设值。<br>2，系统保存商品信息。<br><br>1.2 商品的查找<br> 1，库存管理人员输入商品的部分属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）<br>2，系统根据输入的信息模糊查找，反馈可能的商品列表<br>3，用户在系统反馈的列表中选择商品。<br>4，系统显示该商品的信息（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）。<br><br>1.3 商品的修改<br>1，库存管理人员选择某商品<br>2、系统显示商品信息<br>3，库存管理人员修改商品某属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）并保存<br>4，系统保存修改后的信息。<br><br>1.4 商品的删除<br>1，点击选中商品<br>2，确认选择<br>3，系统刷新，商品删除成功。
+|扩展流程|1.1  <br>2a 系统中已经存在该商品<br> 1，系统提示商品已存在，取消本次操作<br>2b 初始属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）格式不正确<br>1，系统提示属性输入格式不正确<br><br>1.2<br>1a  商品ID输入不正确<br>1，系统提示商品ID输入不正确<br>2a  商品不存在<br>1，系统提示没有找到该商品。<br>1b 商品名输入不正确<br>1,系统提示商品名输入不正确<br><br>1.3<br>3a 输入属性的格式不正确<br>1，系统在点击修改时提示输入格式不正确。<br>
+|特殊需求|１，商品价格前加人民币符号，以人民币为单位，并保留两位小数。<br>2，商品编号符合统一的编号规范。
+
+
+<h3 id='3'>库存信息查看</h3>
+
+| ID | 3 |
 |----|----|
 |用例名称|库存信息查看
 |创建者|王瑞华
@@ -29,11 +99,28 @@
 |拓展流程|1.1<br>2a、查询内容输入格式错误<br>1,系统提示查询内容格式错误并拒绝输入<br><br>1.2<br>2a 库存管理人员选择导出excel 表<br>2，系统自动将信息生成excel 文件。
 |特殊需求|１，时间段内库存数量要有合计，包括价格合计和总数合计。
 
+<h3 id='4'>库存赠送</h3>
 
-### 库存修正
+|用例ID| 4 |
+|--------|------|
+|创建者|王瑞华|
+|创建日期|2017.9.13
+|最后一次修改者|王瑞华
+|最后更新日期|2017.9.20
+|参与者|库存管理人员，完成库存赠送操作。<br>总经理，审批库存赠送单。
+|触发条件|有客户满足了受赠条件。
+|前置条件|库存管理人员和总经理被认证，且总经理已经制定好了赠送策略
+|后置条件|更新系统中的库存数据，并且打印单据。
+|优先级| 高
+|正常流程|1，在销售过程中，客户满足了某项受赠条件，系统自动生成库存赠送单。<br>2，总经理审批并通过库存赠送单。<br>3，系统向库存管理人员发送出货消息。<br>4，库存管理人员按单据把货物出库。<br>5，货物出库成功后，系统自动调整系统库存。<br>6，系统打印库存赠送单。
+|扩展流程|2a 总经理拒绝通过该单据的审批    <br>1，系统向销售人员发送消息。<br>2，销售人员通知客户赠送失败。<br>2b 总经理手动填写并提交库存赠送单<br>1，直接向库存管理人员发送出货消息，并继续下面的流程<br>4a 库存不足<br>1，向总经理发送消息，说明库存不足，并反馈库存数量。<br>1a, 总经理重新填写库存赠送单<br> 1，重新完成赠送操作<br>1b, 总经理取消赠送操作<br>1，向销售人员发送消息。<br>2，销售人员通知客户赠送失败。
+|特殊需求|1，总经理审批单据后会显示审批时间，库存管理人员在出库时必须按时间顺序操作
 
 
-id| 2 | 名称| 库存修正
+<h3 id='5'>库存修正</h3>
+
+
+id| 5 | 名称| 库存修正
 |---|---|---|---|
 创建者 | 张翔宇 | 最后更新者 | 张翔宇
 创建时间|2017/9/19|最后更新时间|2017/9/22
@@ -85,123 +172,72 @@ id| 2 | 名称| 库存修正
 	   
 	   
 	   
-	   
-### 库存赠送 ##
-|用例ID| 3 |
-|--------|------|
-|创建者|王瑞华|
-|创建日期|2017.9.13
-|最后一次修改者|王瑞华
-|最后更新日期|2017.9.20
-|参与者|库存管理人员，完成库存赠送操作。<br>总经理，审批库存赠送单。
-|触发条件|有客户满足了受赠条件。
-|前置条件|库存管理人员和总经理被认证，且总经理已经制定好了赠送策略
-|后置条件|更新系统中的库存数据，并且打印单据。
-|优先级| 高
-|正常流程|1，在销售过程中，客户满足了某项受赠条件，系统自动生成库存赠送单。<br>2，总经理审批并通过库存赠送单。<br>3，系统向库存管理人员发送出货消息。<br>4，库存管理人员按单据把货物出库。<br>5，货物出库成功后，系统自动调整系统库存。<br>6，系统打印库存赠送单。
-|扩展流程|2a 总经理拒绝通过该单据的审批    <br>1，系统向销售人员发送消息。<br>2，销售人员通知客户赠送失败。<br>2b 总经理手动填写并提交库存赠送单<br>1，直接向库存管理人员发送出货消息，并继续下面的流程<br>4a 库存不足<br>1，向总经理发送消息，说明库存不足，并反馈库存数量。<br>1a, 总经理重新填写库存赠送单<br> 1，重新完成赠送操作<br>1b, 总经理取消赠送操作<br>1，向销售人员发送消息。<br>2，销售人员通知客户赠送失败。
-|特殊需求|1，总经理审批单据后会显示审批时间，库存管理人员在出库时必须按时间顺序操作
 
 
+<h3 id='6'>客户管理</h3>
 
-### 期初建账
-ID |4| 名称| 期初建账 
+ID |6| 名称| 客户管理 
 ---|---|---|---|
-创建者 | 高毓彬 |最后一次更新者  | 高毓彬 |
-创建日期|2017.9.16|最后一次更新日期|2017.9.23
+创建者 | 李安迪 |最后一次更新者  | 李安迪 |
+创建日期|2017.9.19|最后一次更新日期 |2017.9.30
 
-参与者|财务人员，目标是建立一套初期账目作为系统的启动初始状态
+参与者|销售员，目标是管理客户的信息<br/>销售经理，目标是管理客户的信息
 ---|---|
-触发条件|系统初始化
-前置条件|财务人员必须已经被识别和授权
-后置条件|商品信息，客户账户信息，银行账户信息更新
-优先级|低
-正常流程|<h5>1.0 系统初始化</h5>1、财务人员选择初始化信息种类（商品信息，客户信息，银行账户信息）<br/>2、系统显示相应初始化信息表格<br/>3、财务人员输入商品信息（商品分类，某一商品的名称，类别，型号，进价/售价(默认为上年平均)，最近进价和最近售价留空），客户信息（客户分类，某一个客户的名称，联系方式等，应收应付(之前遗留)），银行账户信息（名称，余额）<br/>4、系统显示商品信息（商品分类，某一商品的名称，类别，型号，进价/售价(默认为上年平均)，最近进价和最近售价留空），客户信息（客户分类，某一个客户的名称，联系方式等，应收应付(之前遗留)），银行账户信息（名称，余额）<br/>财务人员重复1～4步，直到输入完成所有初始化信息<br/>5、财务人员结束输入<br/>6、系统记录期初建账信息
-扩展流程|1a、商品信息在现有目录中已存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示该商品信息已存在并显示商品信息，客户信息，银行账户信息<br/>1b、客户信息在现有目录中已存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示该客户信息已存在并显示客户信息<br/>1c、银行账户信息在现有目录中已存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示该银行账户信息已存在并显示银行账户信息<br/>1-2a、删除已输入信息<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、输入商品标识<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、系统取消该商品<br/>转到第正常流程第2步
+触发条件|无
+前置条件|销售员或销售经理必须已经被识别和授权
+后置条件|客户信息更新完毕
+优先级|中
+正常流程|<h5>1.0、增加客户<h5/>1、销售员或销售经理输入新客户属性，包括分类（进货商、销售商）、级别（五级，一级普通用户，五级VIP客户）、姓名、电话、地址、邮编、电子邮箱、应收额度、默认业务员<br/>2、系统显示新客户信息，客户的属性有：编号（自动计算）、分类、级别、姓名、电话、地址、邮编、电子邮箱、应收额度、应收、应付（不可修改）、默认业务员。<br/>销售员或销售经理重复1~2步，直到输入所有新客户<br/>3、销售员或销售经理保存输入信息<br/>4、系统保存新客户信息<br/><h5>1.1、删除客户<h5/>1、销售员或销售经理输入客户名称、客户编号<br>2、系统显示所查找客户信息<br>3、销售员或销售经理确认删除某客户<br>4、系统删除该客户信息<h5>1.2、修改客户属性<h5/>1、销售员或销售经理输入客户名称、客户编号<br>2、系统显示所查找客户信息<br>3、销售员或销售经理编辑客户属性，可修改的属性有：级别、姓名、电话、地址、邮编、电子邮箱、应收额度、默认业务员<br/>4、系统保存客户新信息<br><h5>1.3、查询客户<h5/>1、销售员或销售经理输入客户名称、客户编号<br>2、系统显示所查找客户信息<br>
+扩展流程|无
 特殊需求|无
 
 
 
-### 日志查看 ##
+<h3 id='7'>进货</h3>
 
-| ID | 5|
-|----|----|
-|用例名称|日志查看
-|创建者|王瑞华
-|最后一次更新者|张翔宇
-|创建时间|2017.9.14
-|最后一次更新时间| 2017.10.2
-|参与者|财务人员、销售经理、总经理
-|触发条件|无
-|前置条件|系统已经自动生成了操作日志
-|后置条件|无
-|优先级|很低
-|正常流程|1，财务人员或经理开始日志查看。<br>2，系统向用户显示操作日志目录<br>3，用户选中并打开日志<br>4，系统显示日志的具体内容：时间，操作员，操作。
-|扩展流程|无
-|特别要求|无
+ID |7| 名称| 进货 
+---|---|---|---|
+创建者 | 李安迪 |最后一次更新者  | 李安迪 |
+创建日期|2017.9.19|最后一次更新日期 |2017.9.30
 
-
-### 商品分类管理
-
-id| 6 | 名称| 商品分类管理
-|---|---|---|---|
-创建者 | 张翔宇 | 最后更新者 | 张翔宇
-创建时间|2017/9/19|最后更新时间|2017/9/30
-
-
-参与者|库存管理人员，目标是管理商品的分类
--- | --
+参与者|销售员，目标是快速准确进货<br/>销售经理,目标是快速准确进货
+---|---|
 触发条件|无
-前置条件|库存管理人员必须已经被识别和授权
-后置条件|商品分类被修改
-优先级|低
-正常流程|**1.1 增加分类**
-|1、库存管理员选择增加商品分类
-|2、系统提示库存管理员输入增加的分类名称
-|3、库存管理员输入增加的分类名称并保存
-|4、系统保存新分类的名称及其父分类
-|**1.2 删除分类**
-|1、库存管理员选择删除商品分类
-|2、系统删除该分类
-|**1.3 修改分类**
-|1、库存管理员选择想要修改的分类
-|2、系统提示库存管理员输入要修改的名称
-|3、库存管理员输入名称并保存
-|4、系统保存修改后的分类名称
-扩展流程|无
-特殊需求|只能删除没有商品的叶分类
+前置条件|销售员或销售经理必须已经被识别和授权
+后置条件|保存进货单信息并提交给总经理
+优先级|高
+正常流程|1、销售员或销售经理新建一个进货单<br/>2、系统生成进货单，包括：单据编号（自动计算），供应商，仓库，操作员，入库商品列表，备注，总额合计。其中入库商品列表包含的信息有：商品编号，名称，型号，数量，单价，金额，备注<br/>3、销售员或销售经理输入客户名称或编号<br/>4、系统显示客户名称编号<br/>5、销售员或销售经理请求选择商品。<br/>6、系统提供商品选择列表<br/>7、销售员或销售经理选择商品名称<br/>8、系统显示商品编号，型号，默认单价<br/>9、销售员或销售经理填写商品数量，单价，备注<br/>10、系统计算总额<br/>销售员或销售经理重复5~10步，直到完成所有商品的选择<br/>11、销售员或销售经理提交进货单<br/>12、系统保存并提交进货单
+扩展流程|1b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br/>2a、进货单据计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货单生成量超过限额，并拒绝输入<br/>3a、销售员或销售经理输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>3b、输入的客户不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示客户不存在<br/>9a、销售员或销售经理更改商品单价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价<br/>9b、销售员或销售经理填写备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>1-10a、销售员或销售经理保存进货草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存进货草稿单<br/>
+特殊需求|进货单单据编号格式为JHD-yyyyMMdd-xxxxx，后五位每天从1开始编号
 
 
 
-### 商品管理 ##
+<h3 id='8'>进货退货</h3>
 
-| ID | 7|
-|----|----|
-|用例名称|商品管理
-|创建者|王瑞华
-|最后一次更新者|李安迪
-|创建时间|2017.9.14
-|最后一次更新时间| 2017.9.21
-|参与者|库存管理人员，目的是处理商品或商品信息的变动
-|触发条件|市场变化：新商品出现；旧商品淘汰；商品标识、名称或价格变化
-|前置条件|库存管理人员已被认证和授权
-|后置条件|记录商品变更信息
-|优先级|高
-|正常流程|1.1 商品的增加<br>1，库存管理人员输入商品属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）并为部分属性设值。<br>2，系统保存商品信息。<br><br>1.2 商品的查找<br> 1，库存管理人员输入商品的部分属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）<br>2，系统根据输入的信息模糊查找，反馈可能的商品列表<br>3，用户在系统反馈的列表中选择商品。<br>4，系统显示该商品的信息（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）。<br><br>1.3 商品的修改<br>1，库存管理人员选择某商品<br>2、系统显示商品信息<br>3，库存管理人员修改商品某属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）并保存<br>4，系统保存修改后的信息。<br><br>1.4 商品的删除<br>1，点击选中商品<br>2，确认选择<br>3，系统刷新，商品删除成功。
-|扩展流程|1.1  <br>2a 系统中已经存在该商品<br> 1，系统提示商品已存在，取消本次操作<br>2b 初始属性（编号、名称、型号、库存数量、进价、零售价、最近进价、最近零售价。）格式不正确<br>1，系统提示属性输入格式不正确<br><br>1.2<br>1a  商品ID输入不正确<br>1，系统提示商品ID输入不正确<br>2a  商品不存在<br>1，系统提示没有找到该商品。<br>1b 商品名输入不正确<br>1,系统提示商品名输入不正确<br><br>1.3<br>3a 输入属性的格式不正确<br>1，系统在点击修改时提示输入格式不正确。<br>
-|特殊需求|１，商品价格前加人民币符号，以人民币为单位，并保留两位小数。<br>2，商品编号符合统一的编号规范。
+ID |8| 名称| 进货退货 
+---|---|---|---|
+创建者 | 李安迪 |最后一次更新者  | 李安迪 |
+创建日期|2017.9.19|最后一次更新日期 |2017.9.30
+
+参与者|销售员，目标是快速准确进货退货<br/>销售经理,目标是快速准确进货退货
+---|---|
+触发条件|无
+前置条件|销售员或销售经理必须已经被识别和授权
+后置条件|保存进货退货单信息并提交给总经理
+优先级|高
+正常流程|1、销售员或销售经理新建一个进货退货单<br/>2、系统生成进货退货单，包括：单据编号（自动计算），供应商，仓库，操作员，出库商品列表，备注，总额合计。其中出库商品列表包含的信息有：商品编号，名称，型号，数量，单价，金额，备注<br/>3、销售员或销售经理输入客户名称或编号<br/>4、系统显示客户名称编号<br/>5、销售员或销售经理请求选择商品。<br/>6、系统提供商品选择列表<br/>7、销售员或销售经理选择商品名称<br/>8、系统显示商品编号，型号，默认单价<br/>9、销售员或销售经理填写商品数量，单价，备注<br/>10、系统计算总额<br/>销售员或销售经理重复5~10步，直到完成所有商品的选择<br/>11、销售员或销售经理提交进货退货单<br/>12、系统保存并提交进货退货单
+扩展流程|1b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br/>2a、进货退货单据计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货退货单生成量超过限额，并拒绝输入<br/>3a、销售员或销售经理输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>3b、输入的客户不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示客户不存在<br/>9a、销售员或销售经理更改商品单价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价<br/>9b、销售员或销售经理填写备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>1-10a、销售员或销售经理保存进货退货草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存进货退货草稿单<br/>
+特殊需求|进货退货单单据编号格式为JHTHD-yyyyMMdd-xxxxx，后五位每天从1开始编号
 
 
 
 
-
-### 销售
+<h3 id='9'>销售</h3>
 
 id| 9 | 名称| 销售
 |---|---|---|---|
 创建者 | 张翔宇 | 最后更新者 | 张翔宇
 创建时间|2017/9/19|最后更新时间|2017/9/30
-
 
 
 参与者|进货销售人员，目标完成销售过程中销售单的制定
@@ -245,13 +281,13 @@ id| 9 | 名称| 销售
 |&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12、系统提示折让超出额度
 特殊需求|单据编号格式为 XSD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
-### 销售退货
+
+<h3 id='10'>销售退货</h3>
 
 id| 10 | 名称| 销售退货
 |---|---|---|---|
 创建者 | 张翔宇 | 最后更新者 | 张翔宇
 创建时间|2017/9/19|最后更新时间|2017/9/30
-
 
 
 参与者|进货销售人员，目标完成销售退货过程中销售退货单的制定
@@ -296,48 +332,31 @@ id| 10 | 名称| 销售退货
 特殊需求|单据编号格式为 XSTHD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
-### 进货
+<h3 id='11'>账户管理</h3>
 
-ID |11| 名称| 进货 
+ID |11| 名称| 账户管理
 ---|---|---|---|
-创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
+创建者 | 高毓彬 |最后一次更新者  | 高毓彬 |
+创建日期|2017.9.16|最后一次更新日期| 2017.9.23
 
-参与者|销售员，目标是快速准确进货<br/>销售经理,目标是快速准确进货
+参与者|财务人员，目标是公司银行账目的查看与增删改查
 ---|---|
-触发条件|无
-前置条件|销售员或销售经理必须已经被识别和授权
-后置条件|保存进货单信息并提交给总经理
-优先级|高
-正常流程|1、销售员或销售经理新建一个进货单<br/>2、系统生成进货单，包括：单据编号（自动计算），供应商，仓库，操作员，入库商品列表，备注，总额合计。其中入库商品列表包含的信息有：商品编号，名称，型号，数量，单价，金额，备注<br/>3、销售员或销售经理输入客户名称或编号<br/>4、系统显示客户名称编号<br/>5、销售员或销售经理请求选择商品。<br/>6、系统提供商品选择列表<br/>7、销售员或销售经理选择商品名称<br/>8、系统显示商品编号，型号，默认单价<br/>9、销售员或销售经理填写商品数量，单价，备注<br/>10、系统计算总额<br/>销售员或销售经理重复5~10步，直到完成所有商品的选择<br/>11、销售员或销售经理提交进货单<br/>12、系统保存并提交进货单
-扩展流程|1b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br/>2a、进货单据计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货单生成量超过限额，并拒绝输入<br/>3a、销售员或销售经理输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>3b、输入的客户不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示客户不存在<br/>9a、销售员或销售经理更改商品单价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价<br/>9b、销售员或销售经理填写备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>1-10a、销售员或销售经理保存进货草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存进货草稿单<br/>
-特殊需求|进货单单据编号格式为JHD-yyyyMMdd-xxxxx，后五位每天从1开始编号
-
-### 进货退货
-ID |12| 名称| 进货退货 
----|---|---|---|
-创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
-
-参与者|销售员，目标是快速准确进货退货<br/>销售经理,目标是快速准确进货退货
----|---|
-触发条件|无
-前置条件|销售员或销售经理必须已经被识别和授权
-后置条件|保存进货退货单信息并提交给总经理
-优先级|高
-正常流程|1、销售员或销售经理新建一个进货退货单<br/>2、系统生成进货退货单，包括：单据编号（自动计算），供应商，仓库，操作员，出库商品列表，备注，总额合计。其中出库商品列表包含的信息有：商品编号，名称，型号，数量，单价，金额，备注<br/>3、销售员或销售经理输入客户名称或编号<br/>4、系统显示客户名称编号<br/>5、销售员或销售经理请求选择商品。<br/>6、系统提供商品选择列表<br/>7、销售员或销售经理选择商品名称<br/>8、系统显示商品编号，型号，默认单价<br/>9、销售员或销售经理填写商品数量，单价，备注<br/>10、系统计算总额<br/>销售员或销售经理重复5~10步，直到完成所有商品的选择<br/>11、销售员或销售经理提交进货退货单<br/>12、系统保存并提交进货退货单
-扩展流程|1b、销售员或销售经理选择之前保存的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示草稿单列表<br>&nbsp;&nbsp;&nbsp;&nbsp;2、销售人员选择想要编辑的草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;3、系统打开草稿单使之进入编辑状态<br/>2a、进货退货单据计算编号超过日限额99999<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示今日进货退货单生成量超过限额，并拒绝输入<br/>3a、销售员或销售经理输入备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>3b、输入的客户不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示客户不存在<br/>9a、销售员或销售经理更改商品单价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统更改入库商品列表中的商品单价<br/>9b、销售员或销售经理填写备注<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统显示备注<br/>1-10a、销售员或销售经理保存进货退货草稿单<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存进货退货草稿单<br/>
-特殊需求|进货退货单单据编号格式为JHTHD-yyyyMMdd-xxxxx，后五位每天从1开始编号
+触发条件|账户属性变动，查询账户，增删账户
+前置条件|财务人员必须已经被识别和授权
+后置条件|更新账户信息
+优先级|中
+正常流程|<h5>1.0查找账目</h5>1、财务人员输入关键字进行模糊查找账户 <br/>2、系统显示账户信息（名称，金额）<br/><h5>1.1修改账户</h5>1、财务人员选择信息变动的操作（增加账户，删除账户，修改账户）<br/>2、系统显示账户信息（名称，金额）<br/>3、财务人员（增加，删除，修改账户）<br/>4、系统显示变化信息列表，包括原信息和变化后信息<br/>总经理重复1～4步，直到输入完成所有变化信息<br/>5、财务人员结束输入<br/>6、系统记录变化后的信息
+扩展流程|1.0-1a、账户信息在当前目录中不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示账户信息不存在并请求重新输入
+特殊需求|1、最高权限（总经理）也能进行账户管理
 
 
 
-### 收款
+<h3 id='12'>收款</h3>
 
-id| 8 | 名称| 收款
+id| 12 | 名称| 收款
 |---|---|---|---|
 创建者 | 张翔宇 | 最后更新者 | 张翔宇
 创建时间|2017/9/19|最后更新时间|2018/1/12
-
 
 
 参与者|财务人员，目标完成收款
@@ -366,7 +385,8 @@ id| 8 | 名称| 收款
 |&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
 特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
-### 付款
+<h3 id='13'>付款</h3>
+
 ID |13| 名称| 付款 
 ---|---|---|---|
 创建者 | 李安迪 |最后一次更新者  | 张翔宇 |
@@ -398,8 +418,8 @@ ID |13| 名称| 付款
 |&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
 特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
+<h3 id='14'>现金费用处理</h3>
 
-### 现金费用处理
 ID |14| 名称| 现金费用处理 
 ---|---|---|---|
 创建者 | 李安迪 |最后一次更新者  | 李安迪 |
@@ -416,96 +436,28 @@ ID |14| 名称| 现金费用处理
 特殊需求|现金费用单单据编号格式为XJFYD-yyyyMMdd-xxxxx，后五位每天从1开始编号
 
 
+<h3 id='15'>期初建账</h3>
 
-### 客户管理
-ID |15| 名称| 客户管理 
----|---|---|---|
-创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
-
-参与者|销售员，目标是管理客户的信息<br/>销售经理，目标是管理客户的信息
----|---|
-触发条件|无
-前置条件|销售员或销售经理必须已经被识别和授权
-后置条件|客户信息更新完毕
-优先级|中
-正常流程|<h5>1.0、增加客户<h5/>1、销售员或销售经理输入新客户属性，包括分类（进货商、销售商）、级别（五级，一级普通用户，五级VIP客户）、姓名、电话、地址、邮编、电子邮箱、应收额度、默认业务员<br/>2、系统显示新客户信息，客户的属性有：编号（自动计算）、分类、级别、姓名、电话、地址、邮编、电子邮箱、应收额度、应收、应付（不可修改）、默认业务员。<br/>销售员或销售经理重复1~2步，直到输入所有新客户<br/>3、销售员或销售经理保存输入信息<br/>4、系统保存新客户信息<br/><h5>1.1、删除客户<h5/>1、销售员或销售经理输入客户名称、客户编号<br>2、系统显示所查找客户信息<br>3、销售员或销售经理确认删除某客户<br>4、系统删除该客户信息<h5>1.2、修改客户属性<h5/>1、销售员或销售经理输入客户名称、客户编号<br>2、系统显示所查找客户信息<br>3、销售员或销售经理编辑客户属性，可修改的属性有：级别、姓名、电话、地址、邮编、电子邮箱、应收额度、默认业务员<br/>4、系统保存客户新信息<br><h5>1.3、查询客户<h5/>1、销售员或销售经理输入客户名称、客户编号<br>2、系统显示所查找客户信息<br>
-扩展流程|无
-特殊需求|无
-
-
-### 查看销售明细表
-ID |16| 名称| 表单查看 
----|---|---|---|
-创建者 | 李安迪 |最后一次更新者  | 李安迪 |
-创建日期|2017.9.19|最后一次更新日期 |2017.9.30
-
-参与者|财务人员，目标是了解公司的销售经营情况。<br/>总经理，目标是了解公司的销售经营情况。
----|---|
-触发条件|无
-前置条件|财务人员或总经理必须已经被识别和授权。
-后置条件|无
-优先级|低
-正常流程|<h5>1.0、查看销售明细表<h5/> 1、财务人员或总经理要求查看销售明细表。<br>2、系统显示筛选条件，筛选条件包括时间区间，商品名，客户，业务员，仓库。<br>3、财务人员或总经理选择所需的筛选条件并输入筛选信息。<br>4、系统以列表形式显示符合上述条件的商品销售记录，列表中包括时间（精确到天），商品名，型号，数量，单价，总额。
-扩展流程|4a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<h5>
-特殊需求|无
-
-
-### 查看经营历程
-ID |17| 名称| 查看经营历程
----|---|---|---|
-创建者 | 张翔宇 |最后一次更新者  | 张翔宇 |
-创建日期|2017.10.1|最后一次更新日期 |2017.10.1
-
-参与者|财务人员，目标是了解公司的销售经营情况。
----|---|
-触发条件|无
-前置条件|财务人员或总经理必须已经被识别和授权。
-后置条件|无
-优先级|低
-正常流程|1、财务人员或总经理要求查看经营历程表。<br>2、系统显示筛选条件，筛选条件包括时间区间，单据类型，客户，业务员，仓库。<br>3、财务人员或总经理选择所需的筛选条件并输入筛选信息。<br>4、系统显示出符合条件的单据。
-扩展流程|4a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<br>4b、财务人员选择一条单据并要求进行红冲操作<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统进行红冲操作<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1a、财务人员要求进行再复制操作<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统新建一张以红冲前单子为模板的草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、财务人员编辑并保存草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3、系统更新红冲前单子
-特殊需求|无
-
-
-
-### 查看经营情况
-ID |18| 名称| 查看经营情况 
----|---|---|---|
-创建者 | 张翔宇|最后一次更新者  | 张翔宇 |
-创建日期|2017.10.1|最后一次更新日期 |2017.10.1
-
-参与者|财务人员，目标是了解公司的销售经营情况。
----|---|
-触发条件|无
-前置条件|财务人员或总经理必须已经被识别和授权。
-后置条件|无
-优先级|低
-正常流程|1、财务人员或总经理要求查看经营情况表<br>2、系统显示信息，包括收入类、支出类和利润。收入类显示销售收入和商品类收入。商品类收入表示商品报溢收入、成本调价收入、进货退货差价和代金券与实际收款差额收入。收入类显示折让后总收入，并显示折让了多少。支出类显示销售成本和商品类支出，商品类支出包括商品报损和商品赠出。支出类显示总支出。利润为折让后总收入-总支出。
-扩展流程|2a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<h5>
-特殊需求|无
-
-
-
-### 账户管理
-ID |19| 名称| 账户管理
+ID |15| 名称| 期初建账 
 ---|---|---|---|
 创建者 | 高毓彬 |最后一次更新者  | 高毓彬 |
-创建日期|2017.9.16|最后一次更新日期| 2017.9.23
+创建日期|2017.9.16|最后一次更新日期|2017.9.23
 
-参与者|财务人员，目标是公司银行账目的查看与增删改查
+参与者|财务人员，目标是建立一套初期账目作为系统的启动初始状态
 ---|---|
-触发条件|账户属性变动，查询账户，增删账户
+触发条件|系统初始化
 前置条件|财务人员必须已经被识别和授权
-后置条件|更新账户信息
-优先级|中
-正常流程|<h5>1.0查找账目</h5>1、财务人员输入关键字进行模糊查找账户 <br/>2、系统显示账户信息（名称，金额）<br/><h5>1.1修改账户</h5>1、财务人员选择信息变动的操作（增加账户，删除账户，修改账户）<br/>2、系统显示账户信息（名称，金额）<br/>3、财务人员（增加，删除，修改账户）<br/>4、系统显示变化信息列表，包括原信息和变化后信息<br/>总经理重复1～4步，直到输入完成所有变化信息<br/>5、财务人员结束输入<br/>6、系统记录变化后的信息
-扩展流程|1.0-1a、账户信息在当前目录中不存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示账户信息不存在并请求重新输入
-特殊需求|1、最高权限（总经理）也能进行账户管理
+后置条件|商品信息，客户账户信息，银行账户信息更新
+优先级|低
+正常流程|<h5>1.0 系统初始化</h5>1、财务人员选择初始化信息种类（商品信息，客户信息，银行账户信息）<br/>2、系统显示相应初始化信息表格<br/>3、财务人员输入商品信息（商品分类，某一商品的名称，类别，型号，进价/售价(默认为上年平均)，最近进价和最近售价留空），客户信息（客户分类，某一个客户的名称，联系方式等，应收应付(之前遗留)），银行账户信息（名称，余额）<br/>4、系统显示商品信息（商品分类，某一商品的名称，类别，型号，进价/售价(默认为上年平均)，最近进价和最近售价留空），客户信息（客户分类，某一个客户的名称，联系方式等，应收应付(之前遗留)），银行账户信息（名称，余额）<br/>财务人员重复1～4步，直到输入完成所有初始化信息<br/>5、财务人员结束输入<br/>6、系统记录期初建账信息
+扩展流程|1a、商品信息在现有目录中已存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示该商品信息已存在并显示商品信息，客户信息，银行账户信息<br/>1b、客户信息在现有目录中已存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示该客户信息已存在并显示客户信息<br/>1c、银行账户信息在现有目录中已存在<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示该银行账户信息已存在并显示银行账户信息<br/>1-2a、删除已输入信息<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、输入商品标识<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、系统取消该商品<br/>转到第正常流程第2步
+特殊需求|无
 
 
-### 制定促销策略
-ID |20| 名称| 制定促销策略 
+
+<h3 id='16'>制定促销策略</h3>
+
+ID |16| 名称| 制定促销策略 
 ---|---|---|---|
 创建者 | 高毓彬 |最后一次更新者  |  高毓彬|
 创建日期|2017.9.16|最后一次更新日期|2017.9.23
@@ -520,9 +472,9 @@ ID |20| 名称| 制定促销策略
 扩展流程| 1.0-1a、商品标识非规定形式<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示商品标识输入错误并拒绝输入<br/>2a、在期间内该商品已有特价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示已有特价拒绝输入<br/> 3a、总经理要移除已输入的商品特价信息<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、总经理输入商品标识<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、系统移除该商品的特价信息<br/>
 特殊要求|无
 
+<h3 id='17'>审批单据</h3>
 
-### 审批单据
-ID |21| 名称| 审批单据
+ID |17| 名称| 审批单据
 ---|---|---|---|
 创建者 | 张翔宇 |最后一次更新者  | 张翔宇 |
 创建日期|2017.9.27|最后一次更新日期 |2017.10.2
@@ -549,7 +501,80 @@ ID |21| 名称| 审批单据
 特殊需求|无
 
 
-### 用户账户管理
+<h3 id='18'>日志查看</h3>
+
+| ID | 18|
+|----|----|
+|用例名称|日志查看
+|创建者|王瑞华
+|最后一次更新者|张翔宇
+|创建时间|2017.9.14
+|最后一次更新时间| 2017.10.2
+|参与者|财务人员、销售经理、总经理
+|触发条件|无
+|前置条件|系统已经自动生成了操作日志
+|后置条件|无
+|优先级|很低
+|正常流程|1，财务人员或经理开始日志查看。<br>2，系统向用户显示操作日志目录<br>3，用户选中并打开日志<br>4，系统显示日志的具体内容：时间，操作员，操作。
+|扩展流程|无
+|特别要求|无
+
+
+
+<h3 id='19'>查看销售明细表</h3>
+
+ID |19| 名称| 表单查看 
+---|---|---|---|
+创建者 | 李安迪 |最后一次更新者  | 李安迪 |
+创建日期|2017.9.19|最后一次更新日期 |2017.9.30
+
+参与者|财务人员，目标是了解公司的销售经营情况。<br/>总经理，目标是了解公司的销售经营情况。
+---|---|
+触发条件|无
+前置条件|财务人员或总经理必须已经被识别和授权。
+后置条件|无
+优先级|低
+正常流程|<h5>1.0、查看销售明细表<h5/> 1、财务人员或总经理要求查看销售明细表。<br>2、系统显示筛选条件，筛选条件包括时间区间，商品名，客户，业务员，仓库。<br>3、财务人员或总经理选择所需的筛选条件并输入筛选信息。<br>4、系统以列表形式显示符合上述条件的商品销售记录，列表中包括时间（精确到天），商品名，型号，数量，单价，总额。
+扩展流程|4a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<h5>
+特殊需求|无
+
+<h3 id='20'>查看经营历程</h3>
+
+ID |20| 名称| 查看经营历程
+---|---|---|---|
+创建者 | 张翔宇 |最后一次更新者  | 张翔宇 |
+创建日期|2017.10.1|最后一次更新日期 |2017.10.1
+
+参与者|财务人员，目标是了解公司的销售经营情况。
+---|---|
+触发条件|无
+前置条件|财务人员或总经理必须已经被识别和授权。
+后置条件|无
+优先级|低
+正常流程|1、财务人员或总经理要求查看经营历程表。<br>2、系统显示筛选条件，筛选条件包括时间区间，单据类型，客户，业务员，仓库。<br>3、财务人员或总经理选择所需的筛选条件并输入筛选信息。<br>4、系统显示出符合条件的单据。
+扩展流程|4a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<br>4b、财务人员选择一条单据并要求进行红冲操作<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统进行红冲操作<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1a、财务人员要求进行再复制操作<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统新建一张以红冲前单子为模板的草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、财务人员编辑并保存草稿单<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3、系统更新红冲前单子
+特殊需求|无
+
+
+<h3 id='21'>查看经营情况</h3>
+
+ID |21| 名称| 查看经营情况 
+---|---|---|---|
+创建者 | 张翔宇|最后一次更新者  | 张翔宇 |
+创建日期|2017.10.1|最后一次更新日期 |2017.10.1
+
+参与者|财务人员，目标是了解公司的销售经营情况。
+---|---|
+触发条件|无
+前置条件|财务人员或总经理必须已经被识别和授权。
+后置条件|无
+优先级|低
+正常流程|1、财务人员或总经理要求查看经营情况表<br>2、系统显示信息，包括收入类、支出类和利润。收入类显示销售收入和商品类收入。商品类收入表示商品报溢收入、成本调价收入、进货退货差价和代金券与实际收款差额收入。收入类显示折让后总收入，并显示折让了多少。支出类显示销售成本和商品类支出，商品类支出包括商品报损和商品赠出。支出类显示总支出。利润为折让后总收入-总支出。
+扩展流程|2a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<h5>
+特殊需求|无
+
+
+<h3 id='21'>用户账户管理</h3>
 
 ID |22| 名称| 用户账户管理
 ---|---|---|---|
