修改用例文档的目录在gitlab上不能跳转的问题

--- a/doc/md/用例文档/用例文档.md
+++ b/doc/md/用例文档/用例文档.md
@@ -8,30 +8,31 @@
 <br/><br/>
 
 ## 目录
-[1.商品分类管理](#1)  
-[2.商品管理](#2)  
-[3.库存信息查看](#3)    
-[4.库存赠送](#4)  
-[5.库存修正](#5)    
-[6.客户管理](#6)  
-[7.进货](#7)  
-[8.进货退货](#8)  
-[9.销售](#9)  
-[10.销售退货](#10)  
-[11.账户管理](#11)  
-[12.收款](#12)  
-[13.付款](#13)  
-[14.现金费用处理](#14)  
-[15.期初建账](#15)  
-[16.制定促销策略](#16)  
-[17.审批单据](#17)  
-[18.日志查看](#18)  
-[19.查看销售明细表](#19)  
-[20.查看经营历程](#20)  
-[21.查看经营情况](#21)  
-[21.用户账户管理](#22)  
 
-<h3 id='1'>商品分类管理</h3>
+[1.商品分类管理](#1-商品分类管理)  
+[2.商品管理](#2-商品管理)  
+[3.库存信息查看](#3-库存信息查看)    
+[4.库存赠送](#4-库存赠送)  
+[5.库存修正](#5-库存修正)    
+[6.客户管理](#6-客户管理)  
+[7.进货](#7-进货)  
+[8.进货退货](#8-进货退货)  
+[9.销售](#9-销售)  
+[10.销售退货](#10-销售退货)  
+[11.账户管理](#11-账户管理)  
+[12.收款](#12-收款)  
+[13.付款](#13-付款)  
+[14.现金费用处理](#14-现金费用处理)  
+[15.期初建账](#15-期初建账)  
+[16.制定促销策略](#16-制定促销策略)  
+[17.审批单据](#17-审批单据)  
+[18.日志查看](#18-日志查看)  
+[19.查看销售明细表](#19-查看销售明细表)  
+[20.查看经营历程](#20-查看经营历程)  
+[21.查看经营情况](#21-查看经营情况)  
+[21.用户账户管理](#22-用户账户管理)  
+
+## 1. 商品分类管理
 
 id| 1 | 名称| 商品分类管理
 |---|---|---|---|
@@ -61,8 +62,7 @@ id| 1 | 名称| 商品分类管理
 扩展流程|无
 特殊需求|只能删除没有商品的叶分类
 
-
-<h3 id='2'>商品管理</h3>
+## 2. 商品管理
 
 | ID | 2|
 |----|----|
@@ -81,7 +81,7 @@ id| 1 | 名称| 商品分类管理
 |特殊需求|１，商品价格前加人民币符号，以人民币为单位，并保留两位小数。<br>2，商品编号符合统一的编号规范。
 
 
-<h3 id='3'>库存信息查看</h3>
+## 3. 库存信息查看
 
 | ID | 3 |
 |----|----|
@@ -99,7 +99,7 @@ id| 1 | 名称| 商品分类管理
 |拓展流程|1.1<br>2a、查询内容输入格式错误<br>1,系统提示查询内容格式错误并拒绝输入<br><br>1.2<br>2a 库存管理人员选择导出excel 表<br>2，系统自动将信息生成excel 文件。
 |特殊需求|１，时间段内库存数量要有合计，包括价格合计和总数合计。
 
-<h3 id='4'>库存赠送</h3>
+## 4. 库存赠送
 
 |用例ID| 4 |
 |--------|------|
@@ -117,7 +117,7 @@ id| 1 | 名称| 商品分类管理
 |特殊需求|1，总经理审批单据后会显示审批时间，库存管理人员在出库时必须按时间顺序操作
 
 
-<h3 id='5'>库存修正</h3>
+## 5. 库存修正
 
 
 id| 5 | 名称| 库存修正
@@ -174,7 +174,7 @@ id| 5 | 名称| 库存修正
 	   
 
 
-<h3 id='6'>客户管理</h3>
+## 6. 客户管理
 
 ID |6| 名称| 客户管理 
 ---|---|---|---|
@@ -193,7 +193,7 @@ ID |6| 名称| 客户管理
 
 
 
-<h3 id='7'>进货</h3>
+## 7. 进货
 
 ID |7| 名称| 进货 
 ---|---|---|---|
@@ -214,7 +214,7 @@ ID |7| 名称| 进货
 
 
 
-<h3 id='8'>进货退货</h3>
+## 8. 进货退货
 
 ID |8| 名称| 进货退货 
 ---|---|---|---|
@@ -233,7 +233,7 @@ ID |8| 名称| 进货退货
 
 
 
-<h3 id='9'>销售</h3>
+## 9. 销售
 
 id| 9 | 名称| 销售
 |---|---|---|---|
@@ -252,7 +252,7 @@ id| 9 | 名称| 销售
 特殊需求|单据编号格式为 XSD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
-<h3 id='10'>销售退货</h3>
+## 10. 销售退货
 
 id| 10 | 名称| 销售退货
 |---|---|---|---|
@@ -271,7 +271,7 @@ id| 10 | 名称| 销售退货
 特殊需求|单据编号格式为 XSTHD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
-<h3 id='11'>账户管理</h3>
+## 11. 账户管理
 
 ID |11| 名称| 账户管理
 ---|---|---|---|
@@ -290,7 +290,7 @@ ID |11| 名称| 账户管理
 
 
 
-<h3 id='12'>收款</h3>
+## 12. 收款
 
 id| 12 | 名称| 收款
 |---|---|---|---|
@@ -325,7 +325,7 @@ id| 12 | 名称| 收款
 特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
-<h3 id='13'>付款</h3>
+## 13. 付款
 
 ID |13| 名称| 付款 
 ---|---|---|---|
@@ -358,7 +358,7 @@ ID |13| 名称| 付款
 |&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
 特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
-<h3 id='14'>现金费用处理</h3>
+## 14. 现金费用处理
 
 ID |14| 名称| 现金费用处理 
 ---|---|---|---|
@@ -376,7 +376,7 @@ ID |14| 名称| 现金费用处理
 特殊需求|现金费用单单据编号格式为XJFYD-yyyyMMdd-xxxxx，后五位每天从1开始编号
 
 
-<h3 id='15'>期初建账</h3>
+## 15. 期初建账
 
 ID |15| 名称| 期初建账 
 ---|---|---|---|
@@ -395,7 +395,7 @@ ID |15| 名称| 期初建账
 
 
 
-<h3 id='16'>制定促销策略</h3>
+## 16. 制定促销策略
 
 ID |16| 名称| 制定促销策略 
 ---|---|---|---|
@@ -412,7 +412,7 @@ ID |16| 名称| 制定促销策略
 扩展流程| 1.0-1a、商品标识非规定形式<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示商品标识输入错误并拒绝输入<br/>2a、在期间内该商品已有特价<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统提示已有特价拒绝输入<br/> 3a、总经理要移除已输入的商品特价信息<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、总经理输入商品标识<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、系统移除该商品的特价信息<br/>
 特殊要求|无
 
-<h3 id='17'>审批单据</h3>
+## 17. 审批单据
 
 ID |17| 名称| 审批单据
 ---|---|---|---|
@@ -441,7 +441,7 @@ ID |17| 名称| 审批单据
 特殊需求|无
 
 
-<h3 id='18'>日志查看</h3>
+## 18. 日志查看
 
 | ID | 18|
 |----|----|
@@ -461,7 +461,7 @@ ID |17| 名称| 审批单据
 
 
 
-<h3 id='19'>查看销售明细表</h3>
+## 19. 查看销售明细表
 
 ID |19| 名称| 表单查看 
 ---|---|---|---|
@@ -478,7 +478,7 @@ ID |19| 名称| 表单查看
 扩展流程|4a、财务人员或总经理要求导出数据<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统导出excel表格<h5>
 特殊需求|无
 
-<h3 id='20'>查看经营历程</h3>
+## 20. 查看经营历程
 
 ID |20| 名称| 查看经营历程
 ---|---|---|---|
@@ -496,7 +496,7 @@ ID |20| 名称| 查看经营历程
 特殊需求|无
 
 
-<h3 id='21'>查看经营情况</h3>
+## 21. 查看经营情况
 
 ID |21| 名称| 查看经营情况 
 ---|---|---|---|
@@ -514,7 +514,7 @@ ID |21| 名称| 查看经营情况
 特殊需求|无
 
 
-<h3 id='21'>用户账户管理</h3>
+## 22. 用户账户管理
 
 ID |22| 名称| 用户账户管理
 ---|---|---|---|
