修改了用例文档中一些表格乱的问题

--- a/doc/md/用例文档/用例文档.md
+++ b/doc/md/用例文档/用例文档.md
@@ -41,26 +41,26 @@ id| 1 | 名称| 商品分类管理
 
 
 参与者|库存管理人员，目标是管理商品的分类
--- | --
+--- | ---
 触发条件|无
 前置条件|库存管理人员必须已经被识别和授权
 后置条件|商品分类被修改
 优先级|低
-正常流程|**1.1 增加分类**
-|1、库存管理员选择增加商品分类
-|2、系统提示库存管理员输入增加的分类名称
-|3、库存管理员输入增加的分类名称并保存
-|4、系统保存新分类的名称及其父分类
-|**1.2 删除分类**
-|1、库存管理员选择删除商品分类
-|2、系统删除该分类
-|**1.3 修改分类**
-|1、库存管理员选择想要修改的分类
-|2、系统提示库存管理员输入要修改的名称
-|3、库存管理员输入名称并保存
-|4、系统保存修改后的分类名称
-扩展流程|无
-特殊需求|只能删除没有商品的叶分类
+正常流程|**1.1 增加分类**  
+| |1、库存管理员选择增加商品分类  
+| |2、系统提示库存管理员输入增加的分类名称  
+| |3、库存管理员输入增加的分类名称并保存  
+| |4、系统保存新分类的名称及其父分类  
+| |**1.2 删除分类**  
+| |1、库存管理员选择删除商品分类  
+| |2、系统删除该分类  
+| |**1.3 修改分类**  
+| |1、库存管理员选择想要修改的分类  
+| |2、系统提示库存管理员输入要修改的名称  
+| |3、库存管理员输入名称并保存  
+| |4、系统保存修改后的分类名称  
+扩展流程|无  
+特殊需求|只能删除没有商品的叶分类  
 
 ## 2. 商品管理
 
@@ -203,7 +203,7 @@ ID |7| 名称| 进货
 
 
 参与者|销售员，目标是快速准确进货<br/>销售经理,目标是快速准确进货
---|--|
+---|---|
 触发条件|无
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存进货单信息并提交给总经理
@@ -242,7 +242,7 @@ id| 9 | 名称| 销售
 
 
 参与者|进货销售人员，目标完成销售过程中销售单的制定
--- | :--
+--- | :---
 触发条件|无
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存销售单信息并提交给总经理
@@ -261,7 +261,7 @@ id| 10 | 名称| 销售退货
 
 
 参与者|进货销售人员，目标完成销售退货过程中销售退货单的制定
--- | :--
+--- | :---
 触发条件|无
 前置条件|销售员或销售经理必须已经被识别和授权
 后置条件|保存销售退货单信息并提交给总经理
@@ -299,30 +299,30 @@ id| 12 | 名称| 收款
 
 
 参与者|财务人员，目标完成收款
--- | :--
+--- | :---
 触发条件|无
 前置条件|财务人员必须已经被识别和授权
 后置条件|保存收款单信息并提交给总经理
 优先级|高
-正常流程|1、财务人员新建收款单
-|2、系统生成一个收款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
-|3、财务人员输入客户编号或名称进行查找
-|4、系统返回符合条件的查找结果
-|5、财务人员选择银行账户
-|6、系统更新转账列表，显示被选择的银行账户
-|7、财务人员填写转账列表
-|8、系统更新转账列表，并更新总额
-|重复5-8至财物人员完成转账列表的填写
-|9、财务人员提交收款单
-|10、系统保存收款单并提交给总经理
-扩展流程|1a、财务人员选择之前的草稿继续编写
-|2a、收款单号超过99999
-|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日收款单超过限额，拒绝继续生成收款单
-|2-8a、财务人员保存单据
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
-|3a、输入的客户编号或名称不存在
-|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
-特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
+|正常流程|1、财务人员新建收款单
+| |2、系统生成一个收款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
+| |3、财务人员输入客户编号或名称进行查找
+| |4、系统返回符合条件的查找结果
+| |5、财务人员选择银行账户
+| |6、系统更新转账列表，显示被选择的银行账户
+| |7、财务人员填写转账列表
+| |8、系统更新转账列表，并更新总额
+| |重复5-8至财物人员完成转账列表的填写
+| |9、财务人员提交收款单
+| |10、系统保存收款单并提交给总经理
+|扩展流程|1a、财务人员选择之前的草稿继续编写
+| |2a、收款单号超过99999
+| |&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日收款单超过限额，拒绝继续生成收款单
+| |2-8a、财务人员保存单据
+| |&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
+| |3a、输入的客户编号或名称不存在
+| |&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
+|特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
 ## 13. 付款
@@ -333,30 +333,31 @@ ID |13| 名称| 付款
 创建日期|2017.9.19|最后一次更新日期 |2018/1/12
 
 参与者|财务人员，目标完成付款
--- | :--
+--- | :---
 触发条件|无
 前置条件|财务人员必须已经被识别和授权
 后置条件|保存付款单信息并提交给总经理
 优先级|高
-正常流程|1、财务人员新建付款单
-|2、系统生成一个付款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
-|3、财务人员输入客户编号或名称进行查找
-|4、系统返回符合条件的查找结果
-|5、财务人员选择银行账户
-|6、系统更新转账列表，显示被选择的银行账户
-|7、财务人员填写转账列表
-|8、系统更新转账列表，并更新总额
-|重复5-8至财物人员完成转账列表的填写
-|9、财务人员提交付款单
-|10、系统保存付款单并提交给总经理
-扩展流程|1a、财务人员选择之前的草稿继续编写
-|2a、付款单号超过99999
-|&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日付款单超过限额，拒绝继续生成付款单
-|2-8a、财务人员保存单据
-|&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
-|3a、输入的客户编号或名称不存在
-|&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
-特殊需求|单据编号格式为 SKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
+|正常流程|1、财务人员新建付款单
+| |2、系统生成一个付款单，包含：单据编号（自动生成），客户，操作员（当前登录用户），转账列表，总额汇总。转账列表中的一项包含：银行账户，转账金额，备注。
+| |3、财务人员输入客户编号或名称进行查找
+| |4、系统返回符合条件的查找结果
+| |5、财务人员选择银行账户
+| |6、系统更新转账列表，显示被选择的银行账户
+| |7、财务人员填写转账列表
+| |8、系统更新转账列表，并更新总额
+| |重复5-8至财物人员完成转账列表的填写
+| |9、财务人员提交付款单
+| |10、系统保存付款单并提交给总经理
+|扩展流程|1a、财务人员选择之前的草稿继续编写
+| |2a、付款单号超过99999
+| |&nbsp;&nbsp;&nbsp;&nbsp;2、系统提示今日付款单超过限额，拒绝继续生成付款单
+| |2-8a、财务人员保存单据
+| |&nbsp;&nbsp;&nbsp;&nbsp;1、系统保存单据信息，单据进入草稿状态
+| |3a、输入的客户编号或名称不存在
+| |&nbsp;&nbsp;&nbsp;&nbsp;4、系统提示该客户不存在
+|特殊需求|单据编号格式为 FKD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
+
 
 ## 14. 现金费用处理
 
@@ -426,19 +427,19 @@ ID |17| 名称| 审批单据
 后置条件|单据审批完成
 优先级|高
 正常流程|1、总经理选择一个单据进行查看<br/>2、系统显示单据信息<br/>3、总经理审批通过<br/>
-|总经理审批通过后操作<br>
-|1.1、进货单<br>系统将进货单状态设为通过，更改库存数量，最近进价，客户的应付数据，将进货单信息发送给库存管理人员，让他完成现实中的进货<br>
-|1.2、进货退货单<br>系统检查进货退货单中每个商品的数量是否大于等于库存中该商品的数量，若不是，则提示总经理库存不足，拒绝进货退货单审批通过。<br>系统将进货退货单状态设为通过，更改库存数量，修改客户的应收数据，将进货退货单发送给库存管理人员，让他完成现实中的出货<br>
-|1.3、销售单<br>系统检查销售单中每个商品的数量是否大于等于库存中该商品的数量，若不是，则提示总经理库存不足，拒绝销售单审批通过。<br>系统计算客户的应收=折让后总价－使用代金劵（若折让后总价小于使用代金劵，则应收为0），检查此次销售后该用户的应收是否在应收额度内，若不在，则提示总经理超过应收额度，拒绝销售单审批通过。<br>系统将销售单状态设为通过，更改库存数量，最近零售价，修改客户的应收数据，将销售单信息发送给库存管理人员，让他完成现实中的出货。<br>若有赠品，系统自动生成库存赠送单，包括：单据编号（自动计算），该销售单的编号及链接（点击可以查看销售单信息），客户，赠品列表。赠品列表包括：赠品名称，数量。并将库存赠送单信息保存，提交给总经理<br>若有代金劵，系统通知销售人员完成现实中代金劵的赠送<br>
-|1.4、销售退货单<br>系统将销售退货单状态设为通过，更改库存数量，修改客户的应付数据，将销售退货单发送给库存管理人员，让他完成现实中的出货<br>
-|1.5、收款单<br>系统将收款单状态设为通过，更改账户余额，客户的应收数据，并通知财务人员完成现实中银行账户的操作<br>
-|1.6、付款单<br>系统将付款单状态设为通过，更改账户余额，客户的应付数据，并通知财务人员完成现实中银行账户的操作<br>
-|1.7、现金费用单<br>系统将现金费用单状态设为通过，更改账户余额，并通知财务人员完成现实中银行账户的操作<br>
-|1.8、库存赠送单<br>系统检查库存赠送单中每个商品的数量是否大于等于库存中该商品的数量，若不是，则提示总经理库存不足，拒绝库存赠送单审批通过。<br>系统将库存赠送单状态设为通过，更改库存数量，将库存赠送单信息发送给库存管理人员，让他完成现实中的库存赠送。<br>
-|1.9、库存报溢单<br>系统将库存报溢单状态设为通过，修改库存数量<br>
-|1.10、库存报损单<br>系统将库存报损单状态设为通过，修改库存数量<br>
-扩展流程|1a、总经理选择多个单据<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统标记所选单据<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、总经理进行选择通过或拒绝<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3、系统保存被标记的单据的审批信息并通知响应人员<br/>3a、总经理未通过该单据的审批<br/>3b、总经理修改单据数据并通过审批
-特殊需求|无
+| |总经理审批通过后操作<br>
+| |1.1、进货单<br>系统将进货单状态设为通过，更改库存数量，最近进价，客户的应付数据，将进货单信息发送给库存管理人员，让他完成现实中的进货<br>
+| |1.2、进货退货单<br>系统检查进货退货单中每个商品的数量是否大于等于库存中该商品的数量，若不是，则提示总经理库存不足，拒绝进货退货单审批通过。<br>系统将进货退货单状态设为通过，更改库存数量，修改客户的应收数据，将进货退货单发送给库存管理人员，让他完成现实中的出货<br>
+| |1.3、销售单<br>系统检查销售单中每个商品的数量是否大于等于库存中该商品的数量，若不是，则提示总经理库存不足，拒绝销售单审批通过。<br>系统计算客户的应收=折让后总价－使用代金劵（若折让后总价小于使用代金劵，则应收为0），检查此次销售后该用户的应收是否在应收额度内，若不在，则提示总经理超过应收额度，拒绝销售单审批通过。<br>系统将销售单状态设为通过，更改库存数量，最近零售价，修改客户的应收数据，将销售单信息发送给库存管理人员，让他完成现实中的出货。<br>若有赠品，系统自动生成库存赠送单，包括：单据编号（自动计算），该销售单的编号及链接（点击可以查看销售单信息），客户，赠品列表。赠品列表包括：赠品名称，数量。并将库存赠送单信息保存，提交给总经理<br>若有代金劵，系统通知销售人员完成现实中代金劵的赠送<br>
+| |1.4、销售退货单<br>系统将销售退货单状态设为通过，更改库存数量，修改客户的应付数据，将销售退货单发送给库存管理人员，让他完成现实中的出货<br>
+| |1.5、收款单<br>系统将收款单状态设为通过，更改账户余额，客户的应收数据，并通知财务人员完成现实中银行账户的操作<br>
+| |1.6、付款单<br>系统将付款单状态设为通过，更改账户余额，客户的应付数据，并通知财务人员完成现实中银行账户的操作<br>
+| |1.7、现金费用单<br>系统将现金费用单状态设为通过，更改账户余额，并通知财务人员完成现实中银行账户的操作<br>
+| |1.8、库存赠送单<br>系统检查库存赠送单中每个商品的数量是否大于等于库存中该商品的数量，若不是，则提示总经理库存不足，拒绝库存赠送单审批通过。<br>系统将库存赠送单状态设为通过，更改库存数量，将库存赠送单信息发送给库存管理人员，让他完成现实中的库存赠送。<br>
+| |1.9、库存报溢单<br>系统将库存报溢单状态设为通过，修改库存数量<br>
+| |1.10、库存报损单<br>系统将库存报损单状态设为通过，修改库存数量<br>
+|扩展流程|1a、总经理选择多个单据<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1、系统标记所选单据<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2、总经理进行选择通过或拒绝<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3、系统保存被标记的单据的审批信息并通知响应人员<br/>3a、总经理未通过该单据的审批<br/>3b、总经理修改单据数据并通过审批
+|特殊需求|无
 
 
 ## 18. 日志查看
@@ -523,7 +524,7 @@ ID |22| 名称| 用户账户管理
 
 
 |参与者|系统管理员
-|--|--|
+|---|---|
 |触发条件|无
 |前置条件|管理员必须已经被识别和授权。
 |后置条件|无
