修正销售模块体系结构文档

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1082,16 +1082,6 @@
 <td>后置条件</td><td>如果能成功创建，返回进货退货单单据编号，如果不能成功创建，返回错误信息 </td>
 </tr>
 <tr>
-<td rowspan="3">Sale.openDraftList</td>
-<td>语法</td> <td>public List<SalesmanListVO> openDraftList()</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>打开草稿单列表 </td>
-</tr>
-<tr>
 <td rowspan="3">Sale.openSaleDraftList</td>
 <td>语法</td> <td>public List<SaleListVO> openSaleDraftList()</td>
 </tr>
@@ -1133,7 +1123,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.saveSaleDraftList</td>
-<td>语法</td> <td>public ResultMessage saveSaleDraftList(SaleListVO vo)</td>
+<td>语法</td> <td>public DataRM saveSaleDraftList(SaleListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个销售回合</td>
@@ -1143,7 +1133,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.saveSaleReturnDraftList</td>
-<td>语法</td> <td>public ResultMessage saveSaleReturnDraftList(SaleReturnListVO vo)</td>
+<td>语法</td> <td>public DataRM saveSaleReturnDraftList(SaleReturnListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个销售退货回合</td>
@@ -1153,7 +1143,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.saveStockDraftList</td>
-<td>语法</td> <td>public ResultMessage saveStockDraftList(StockListVO vo)</td>
+<td>语法</td> <td>public DataRM saveStockDraftList(StockListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个进货回合</td>
@@ -1163,7 +1153,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.saveStockReturnDraftList</td>
-<td>语法</td> <td>public ResultMessage saveStockReturnDraftList(StockReturnListVO vo)</td>
+<td>语法</td> <td>public DataRM saveStockReturnDraftList(StockReturnListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个进货退货回合</td>
@@ -1173,7 +1163,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.commitSaleList</td>
-<td>语法</td> <td>public ResultMessage commitSaleList(SaleListVO vo)</td>
+<td>语法</td> <td>public DataRM commitSaleList(SaleListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>销售单信息填写完整且合法</td>
@@ -1183,7 +1173,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.commitSaleReturnList</td>
-<td>语法</td> <td>public ResultMessage commitSaleReturnList(SaleReturnListVO vo)</td>
+<td>语法</td> <td>public DataRM commitSaleReturnList(SaleReturnListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>销售退货单信息填写完整且合法</td>
@@ -1193,7 +1183,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.commitStockList</td>
-<td>语法</td> <td>public ResultMessage commitStockList(StockListVO vo)</td>
+<td>语法</td> <td>public DataRM commitStockList(StockListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>进货单信息填写完整且合法</td>
@@ -1203,7 +1193,7 @@
 </tr>
 <tr>
 <td rowspan="3">Sale.commitStockReturnList</td>
-<td>语法</td> <td>public ResultMessage commitStockReturnList(StockReturnListVO vo)</td>
+<td>语法</td> <td>public DataRM commitStockReturnList(StockReturnListVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>进货退货单信息填写完整且合法</td>
@@ -1212,24 +1202,134 @@
 <td>后置条件</td><td>提交进货退货单并持久化保存进货退货单数据</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.findVIP</td>
-<td>语法</td> <td>public List<VIPVO> findVIP(String info, SalesmanListType type) </td>
+<td rowspan="3">Sale.deleteSaleList</td>
+<td>语法</td> <td>public DataRM deleteSaleList(String id)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>启动一个销售/进货/进货退货/销售退货回合</td>
+<td>前置条件</td> <td>在初次编辑，且未保存的状态下取消编辑</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有符合单据类型和输入条件的会员的列表</td>
+<td>后置条件</td><td>持久化删除销售单数据</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.findGoods</td>
-<td>语法</td> <td>public List<GoodsVO> findGoods(String info) </td>
+<td rowspan="3">Sale.deleteSaleReturnList</td>
+<td>语法</td> <td>public DataRM deleteSaleReturnList(String id)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>启动一个销售/进货/进货退货/销售退货回合</td>
+<td>前置条件</td> <td>在初次编辑，且未保存的状态下取消编辑</td>
 </tr>
 <tr>
-<td>后置条件</td><td>查询所有符合条件的商品的列表</td>
+<td>后置条件</td><td>持久化删除销售退货单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.deleteStockList</td>
+<td>语法</td> <td>public DataRM deleteStockList(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>在初次编辑，且未保存的状态下取消编辑</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除进货单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.deleteStockReturnList</td>
+<td>语法</td> <td>public DataRM deleteStockReturnList(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>在初次编辑，且未保存的状态下取消编辑</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除进货退货单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.get</td>
+<td>语法</td> <td>public SalesmanlistVO get(String id) </td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批或单据查看回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回该id对应的销售类单据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.rejectSaleList</td>
+<td>语法</td> <td>public DataRM rejectSaleList(SaleListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化更新销售单状态为驳回状态</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.rejectSaleReturnList</td>
+<td>语法</td> <td>public DataRM rejectSaleReturnList(SaleReturnListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化更新销售退货单状态为驳回状态</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.rejectStockList</td>
+<td>语法</td> <td>public DataRM rejectStockList(StockListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化更新进货单状态为驳回状态</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.rejectStockReturnList</td>
+<td>语法</td> <td>public DataRM rejectStockReturnList(StockReturnListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化更新进货退货单状态为驳回状态</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.approveSaleList</td>
+<td>语法</td> <td>public DataRM approveSaleList(SaleListVO vo,boolean isWriteoff)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>,若单据能成功生成，持久化更新单据状态为审批通过状态，改变商品的库存数量，客户的应收数据，否则返回错误信息</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.approveSaleReturnList</td>
+<td>语法</td> <td>public DataRM approveSaleReturnList(SaleReturnListVO vo,boolean isWriteoff)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>若单据能成功生成，持久化更新单据状态为审批通过状态，改变商品的库存数量，客户的应付数据，否则返回错误信息</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.approveStockList</td>
+<td>语法</td> <td>public DataRM approveStockList(StockListVO vo,boolean isWriteoff)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>若单据能成功生成，持久化更新单据状态为审批通过状态，改变商品的库存数量和最近进价，客户的应付数据，否则返回错误信息</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.approveStockReturnList</td>
+<td>语法</td> <td>public DataRM approveStockReturnList(StockReturnListVO vo,boolean isWriteoff)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个单据审批回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>若单据能成功生成，持久化更新单据状态为审批通过状态，改变商品的库存数量，客户的应收数据，否则返回错误信息</td>
 </tr>
 <tr>
 <td rowspan="3">Sale.findPresent</td>
@@ -1251,58 +1351,22 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>DatabaseFactory.getSalesDatabase</td><td>得到Sales数据库的服务的引用</td>
+<td>SaleDataService.insert()</td><td>在数据库中插入销售类单据的单一持久化对象并获取新单据的id</td>
 </tr>
 <tr>
-<td>SalesDataService.insert(SaleListPO po)</td><td>在数据库中插入销售单的单一持久化对象</td>
+<td>SaleDataService.delete(String id)</td><td>在数据库中删除销售类单据的单一持久化对象</td>
 </tr>
 <tr>
-<td>SalesDataService.insert(SaleReturnListPO po)</td><td>在数据库中插入销售退货单的单一持久化对象</td>
+<td>SaleDataService.approve(SalesmanListPO po)</td><td>在数据库中更新销售类单据的单一持久化对象，并置为审批通过状态</td>
 </tr>
 <tr>
-<td>SalesDataService.insert(StockListPO po)</td><td>在数据库中插入进货单的单一持久化对象</td>
+<td>SaleDataService.refuse(SalesmanListPO po)</td><td>在数据库中更新销售类单据的单一持久化对象，并置为审批驳回状态</td>
 </tr>
 <tr>
-<td>SalesDataService.insert(StockReturnListPO po)</td><td>在数据库中插入进货退货单的单一持久化对象</td>
+<td>SaleDataService.get(String id)</td><td>从数据库中得到销售类单据的单一持久化对象</td>
 </tr>
 <tr>
-<td>SalesDataService.deleteSaleList(String id)</td><td>在数据库中删除销售单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.deleteSaleReturnList(String id)</td><td>在数据库中删除销售退货单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.deleteStockList(String id)</td><td>在数据库中删除进货单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.deleteStockReturnList(String id)</td><td>在数据库中删除进货退货单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.update(SaleListPO po)</td><td>在数据库中更新销售单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.update(SaleReturnListPO po)</td><td>在数据库中更新销售退货单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.update(StockListPO po)</td><td>在数据库中更新销售单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.update(StockReturnListPO po)</td><td>在数据库中更新销售单的单一持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.getSaleList(State state)</td><td>得到所有该状态的销售单持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.getSaleReturnList(State state)</td><td>得到所有该状态的销售退货单持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.getStockList(State state)</td><td>得到所有该状态的进货单持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.getStockReturnList(State state)</td><td>得到所有该状态的进货退货单持久化对象</td>
-</tr>
-<tr>
-<td>SalesDataService.get(State state)</td><td>得到所有该状态的持久化对象</td>
+<td>SaleDataService.save(SalesmanListPO po)</td><td>在数据库中更新销售类单据的单一持久化对象，并置为草稿状态</td>
 </tr>
 </table>
 
